Bug fix, table's right border wasn't displaying correctly on iphone

--- a/base.css
+++ b/base.css
@@ -90,6 +90,8 @@ html, body {
 	background-color: var(--bg-color-main);
 	padding: 0px;
 	margin: 0px;
+	max-width: 1920px;
+	margin: auto;
 }
 
 .title {
@@ -111,6 +113,7 @@ html, body {
 	border-collapse: separate;
 	border: 2px solid black;
 	border-radius: 6px;
+	padding: 2px;
 }
 
 .table th {
